# Sipurra

./: .gitignore  1.8 release letter.md  ADAPTIVE_READER_BACKGROUND_PLAN.md  BUILDING.md  NEW_UI_2_COMMITS.md  README.md  THIRD_PARTY_COMPONENTS.md  build.gradle.kts  log.log.txt  settings.gradle.kts  upstream_updates_0.18.5.md
Implementation docs/: AGP_UPGRADE_PLAN.md  AUDIOBOOK_LIVE_TRANSCRIPTION_PLAN.md  AUDIO_METADATA_BUTTON_PLAN.md  Additional_font_support.md  CACHE_MANAGEMENT_PLAN.md  HIDE_PARENTHESES_IN_NAMES_PLAN.md  IMMERSIVE_BOOK_SCREEN_FIXES.md  IMMERSIVE_BOOK_SCREEN_REDESIGN.md  IMMERSIVE_BOOK_SCREEN_REDESIGN_V2.md  IMMERSIVE_BOOK_SYNC_FIX.md  IMMERSIVE_MORPHING_BLINK_FIX_PLAN.md  IMMERSIVE_UI2_CLIPPING_FIX_PLAN.md  LIBRARY_SCREEN_READING_CHIP_FIX_PLAN.md  LIBRARY_UI_CHANGES.md  LOCAL_FIRST_READER_PLAN.md  MULTI_SERVER_PLAN.md  NEW_UI2_ALIGNMENT_AND_FONTS_PLAN.md  OCR_ADD_NOTE_PLAN.md  OCR_SEGMENT_MERGING_PLAN.md  OCR_TEXT_SELECTION_PLAN.md  PADDLE_OCR_FIX_PLAN.md  PADDLE_OCR_PLAN.md  PHASE_1_OFFLINE_PDF_SUPPORT.md  RAPID_OCR_INTEGRATION_PLAN.md  RAPID_OCR_MODELS_PLAN.md  READER_SYNC_PLAN.md  RapidOCR_Android_integration_guide.md  THUMBNAIL_CAROUSEL_PLAN.md  THUMBNAIL_PRESENTATION_PLAN.md  THUMBNAIL_PRESENTATION_PLAN_V2.md  THUMBNAIL_PRESENTATION_POLISH_PLAN.md  UPSTREAM_MERGE_PLAN.md  WHISPER_TRANSCRIPTION_ENGINE_PLAN.md  audiobook_transcription_chatgpt.md  local-file-intent-plan.md  sorting improvments.md
Implementation docs/stitch ui/: library_with_download_icons
epub-reader/: README.md  build.gradle
epub-reader/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
komelia-app/: build.gradle.kts
komelia-domain/core/: build.gradle.kts
komelia-domain/offline/: build.gradle.kts
komelia-epub-reader/ttu-ebook-reader/: package-lock.json
komelia-infra/audiobook-transcription/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
komelia-ui/: build.gradle.kts
(+296 files in other folders)
